--- a/package.json
+++ b/package.json
@@ -6,5 +6,8 @@
     "express": "^4.15.2",
     "https": "^1.0.0",
     "socket.io": "^2.0.4"
+  },
+  "scripts":{
+  	"start":"node index.js"
   }
 }
