--- a/package.json
+++ b/package.json
@@ -5,7 +5,11 @@
   "dependencies": {
     "express": "^4.15.2",
     "https": "^1.0.0",
-    "socket.io": "^2.0.4"
+    "socket.io": "^2.0.4",
+    "body-parser": "^1.9.0",
+    "cors": "~2.5.0",
+    "optimist": "~0.6.1",
+    "ws": "~0.4.25"
   },
   "scripts": {
     "start": "node index.js"
