--- a/package.json
+++ b/package.json
@@ -3,11 +3,13 @@
   "version": "0.0.1",
   "description": "WebRTC codelab",
   "dependencies": {
+    "cors": "^2.8.4",
     "express": "^4.15.2",
     "https": "^1.0.0",
-    "socket.io": "^2.0.4"
+    "socket.io": "^2.0.4",
+    "twilio": "^3.10.0"
   },
-  "scripts":{
-  	"start":"node index.js"
+  "scripts": {
+    "start": "node index.js"
   }
 }
